--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,11 @@
 ---
-title: "AP Exam Volume"
+title: "Number of People per AP Scholar Award by State"
 ---
 
-The volume of AP exams per year increased over time and is higher in larger states with more urban areas. The following data was pulled from the College Board Data Archive. Mapping data was then used to visualize the volume of AP exams by state from 2010 to 2020. Surprisingly, throughout the years, the top six states with the highest AP exam volumes accounted for more than half of the nationwide exam volume. 
+The number of people per AP Scholar award varies tremendously by state. The number of AP Scholar awards was sourced from the AP Data Archive and the state populations was sourced from the American Community Survey 1-Year Data for 2019. The number of people per AP Scholar award for each state was found by dividing the state population by the total number of AP Scholar awards granted to students in that state. Rural states with lower populations tend to have a greater number of people per AP Scholar award.
 
-You can hover the cursor over the states on the plot to display extra information. Note that the values displayed while hovering your cursor on the map do not update during animation if the cursor stays on the same state. 
+Note: You can hover the cursor over the states on the plot to display extra information.
+
 
 ```{r}
 #| echo: false
@@ -12,27 +13,94 @@ You can hover the cursor over the states on the plot to display extra informatio
 #| warning: false
 
 library(readxl)
-library(tidyverse)
-library(gganimate)
-library(gifski)
-library(dplyr)
-library(magick)
-library(ggthemes)
-library(ggplot2)
 library(plotly)
+library(dplyr)
+library(tidycensus)
+library(scales)
 
-ap_exam_volume <- read_xlsx(path = "data/Reformatted-AP-Exam-Volume-by-Region-2010-2020_1.xlsx")
+# Getting state population from the year 2019 and selecting needed columns
+pop_by_state <- get_acs(geography = "state",
+                        variables = "B01001_001",
+                        year = 2019,
+                        survey = "acs1") |>
+  select(NAME, estimate)
 
-volume_by_state <- ap_exam_volume |>
-  plot_geo(locations = state.abb, locationmode = 'USA-states') |>
-    add_trace(z = ap_exam_volume$Volume, locations = ap_exam_volume$state,
-              frame= ~Year) |>
-      layout(geo = list(scope = 'usa'),
-           title = "\nAP Exam Volume by State (2010-2020)") |>
-        add_annotations(yref = 'paper', xref = "paper", y = -0.1, x = 1.15,
-                        text = "College Board: AP Exam Volume by Region (2010-2020)", showarrow = F) |>
-          add_annotations(yref = 'paper', xref = "paper", y = 1.03, x = 1.1,
-                    text = "Volume", showarrow = F)
+# Changing column names
+colnames(pop_by_state) <- c("State", "Population")
 
-volume_by_state
+# Getting rid of Puerto Rico (sorry Puerto Rico)
+pop_by_state <- pop_by_state[1:51,]
+
+# Changing 'State' rows to their abbreviation
+# Reason: So I can use a join function with the AP Scholar data
+pop_by_state$State = c("AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "DC", "FL",
+                       "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME",
+                       "MD", "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH",
+                       "NJ", "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI",
+                       "SC", "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI",
+                       "WY")
+
+ap_scholars <- read_xlsx(path = "data/ap-scholar-data-2019.xlsx")
+
+# Renaming columns (some are broken)
+colnames(ap_scholars) <- c("State", "Grade Level", "Total Scholar Awards", "Scholar", "Honor", "Distinction", "National", "StateAP", "DODEA",
+                           "InterDiploma", "CanadianNational", "Bermuda", "InternationalAP", "CapstoneDip", "CapstoneCert")
+
+# Arranged by state so all the missing values are at the bottom so it is easier to select the rows needed
+ap_scholars <- ap_scholars |>
+  arrange(State)
+
+
+# selected rows needed, kept rows with 'State' being NA because those are the totals for each state
+ap_scholars <- ap_scholars[311:361,]
+
+# Added awards with fewer number that are not as significant (not listed on College Board website under AP Scholar Awards)
+# Also so a reasonable amount of information displays when hovering over a state on the map plot
+# Then selected necessary columns
+ap_scholars <- ap_scholars |>
+  mutate(Other = StateAP + DODEA + InterDiploma + CanadianNational + Bermuda + InternationalAP + CapstoneDip + CapstoneCert) |>
+    select(State, `Total Scholar Awards`, Scholar, Honor, Distinction, National, Other)
+
+# Renamed all 'State' rows to correct state since 'State' rows were NA
+# Reason: I took total from each state for each column and state name was not provided in that row
+ap_scholars$State <- c("AK", "AL", "AR", "AZ", "CA", "CO", "CT",
+                       "DC", "DE", "FL", "GA", "HI", "IA", "ID",
+                       "IL", "IN", "KS", "KY", "LA", "MA", "MD",
+                       "ME", "MI", "MN", "MO", "MS", "MT", "NC",
+                       "ND", "NE", "NH", "NJ", "NM", "NV", "NY",
+                       "OH", "OK", "OR", "PA", "RI", "SC", "SD",
+                       "TN", "TX", "UT", "VA", "VT", "WA", "WI",
+                       "WV", "WY")
+
+# Adding population column so I can potentially find something interesting o_O
+ap_scholars <- left_join(ap_scholars, pop_by_state)
+
+# Diving state population by the total number of AP Scholar awards in that state
+# This is what what I want to plot, seems interesting
+ap_scholars <- ap_scholars |>
+  mutate(`People per award` = Population / `Total Scholar Awards`)
+
+# Rounding the numbers to integers because they had a lot of decimal places and
+# the numbers themselves are high enough that the decimal won't change much
+ap_scholars$`People per award` <- round(ap_scholars$`People per award`, 0)
+
+# Creation of plot, changed color scale, added hovertext to display extra information while hovering over a state
+# Finished plot by adding title and caption
+plot_ly(type = "choropleth",
+        locations = ap_scholars$State,
+        locationmode = "USA-states",
+        z = ap_scholars$`People per award`,
+        colors = 'YlOrBr',
+        hoverinfo = "text",
+        hovertext = paste("People per award:", label_comma()(ap_scholars$`People per award`),
+                          "\nTotal Scholar Awards:", label_comma()(ap_scholars$`Total Scholar Awards`),
+                          "\nPopulation:", label_comma()(ap_scholars$Population))) |>
+  layout(geo = list(scope = "usa"),
+         title = "Number of People per AP Scholar Award by State (2019)",
+         annotations = list(yref = 'paper', xref = "paper", y = 1.025, x = 1.15,
+                            text = "People per award", showarrow = F)) |>
+    add_annotations(yref = 'paper', xref = "paper", y = -0.07, x = 1.44,
+                    text = "College Board: AP Scholar Counts by State 2019
+                    Census Bureau: American Community Survey 1-Year Data (2019)                                           ",
+                    showarrow = F)
 ```
