--- a/about.qmd
+++ b/about.qmd
@@ -3,10 +3,12 @@ title: "About"
 ---
 
 ## About this project
-I made this site as my final project for [Kane's Free Data Science Bootcamp](https://bootcamp.davidkane.info/). I really enjoyed this course and I would recommend it to anyone who wants to learn more about data science.
+I made this site as my final project for [Kane's Free Data Science Bootcamp](https://bootcamp.davidkane.info/). I really enjoyed this course (it's free!) and I would recommend it to anyone who wants to learn more about data science.
 
 ## About Me
 Greetings, my name is Yash Dhore. I am a high school student who enjoys coding in my free time. I am learning java and R currently and hope to broaden my knowledge about programming languages.
+
+Here's my GitHub repo: [https://github.com/yash-dhore/advanced-placement](https://github.com/yash-dhore/advanced-placement)
 
 Feel free to contact me by email: yash@dhore.com
 
@@ -14,7 +16,7 @@ Questions, comments, and concerns about this project are welcome!
 
 ## Sources
 
-[College Board: AP Scholar Counts by State 2020](https://reports.collegeboard.org/media/pdf/ap-scholar-data-2020.pdf)
+[College Board: AP Scholar Counts by State 2019](https://reports.collegeboard.org/media/pdf/ap-scholar-data-2019.pdf)
 
 [Census Bureau: American Community Survey 1-Year Data (2019)](https://www.census.gov/newsroom/press-kits/2020/acs-1year.html)
 
